--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,104 @@
+*{margin:0; padding:0;}
+
 body{
-    margin: 0px;
-    padding: 0px;
+    background: #fffffa;
 }
 header{
+    width: 100%;
+    overflow: hidden;
     background-color: black;
-    color: aliceblue;
-    margin: 0;
-    padding: 0;
-}
-ul{
-    margin: 0;
-    display: flex;
+    
     
 }
+
+div .texto1{
+    font-family:'Arial Narrow';
+    color: #fff;
+    max-width: 1200px;
+    margin: auto;
+    overflow: hidden;
+    text-align: center;
+    line-height: 400px;
+}
+.wrapper{
+    width: 90%;
+    max-width: 1000px;
+    margin:auto;
+        
+}
+header img{
+    
+    width: 25%;
+    margin-right: 10px;
+    margin-bottom: 30px;
+    
+    
+}
+.imagen1{
+    background-image: url(jovenes.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 20px;
+    opacity: 1;
+
+    height: 70vh;
+}
+header nav{
+    float: right;
+    line-height: 100px;
+}
+
+header nav a{
+    display: inline-block;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    line-height:normal;
+    font-size: 20px;
+    font-weight: bold;
+    
+
+    -webkit-transition:all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;    
+}
+header nav a:hover{
+    background: rgb(99, 154, 16);
+    border-radius: 50px;
+}
+
+.header2 {
+    position: fixed;
+    height: 100px;
+}
+.header2 img .logo{
+    line-height: 100px;
+    font-size: 40px;
+}
+.header2 nav{
+    line-height: 100px;
+}
+
+.contenido1 p{
+    margin-bottom: 1em;
+}
+
+@media screen and (max-width: 700px){
+    header .logo,
+    header nav{
+        width:100%;
+        text-align:center;
+        line-height:100px;
+    }
+    .header2{
+        height: auto;
+    }
+
+    .header2 .logo,
+    .header2 nav{
+        line-height: 50px;
+    }
+}
+
+
