--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -211,37 +211,59 @@ h2{
 .atras{
     right: 0px;
 }
-/* nosotros */
-/* seccion */
+/*seccion nosotros */
 .nosotros{
     display: flex;
-    height: 100%;
-    margin: 0px 0px;
-    padding: 0px 0px;
-    box-sizing: border-box;
+    height: 85vh;
 }
 /* seccion de la imagen  */
 .nosotros .img-nosotros{
-    width: 50%;        
-    height: 100%;    
+    width: 50%;
+    height: 100%;
+    background-color: black;
 }
+
 .nosotros .img-nosotros img{
     width: 100%;
-    height: 100%;
+    height: 100%;    
 }
-/* seccion del contenido */
+/* seccion del contenido de texto*/
 .nosotros .contenido{
-    width: 50%;
-    margin-left: 50px;
+    width: 50%;        
 }
-.contenido ul {
-    list-style: none; /* Oculta el punto de la lista */    
-    padding: 0;
+.contenido .texto{
+    width: 60%;
+    margin: 50px auto 0 auto;           
 }
-.contenido .li{    
-  background: url('<svg clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m21 7.702-8.5 4.62v9.678c1.567-.865 6.379-3.517 7.977-4.399.323-.177.523-.519.523-.891zm-9.5 4.619-8.5-4.722v9.006c0 .37.197.708.514.887 1.59.898 6.416 3.623 7.986 4.508zm-8.079-5.629 8.579 4.763 8.672-4.713s-6.631-3.738-8.186-4.614c-.151-.085-.319-.128-.486-.128-.168 0-.335.043-.486.128-1.555.876-8.093 4.564-8.093 4.564z" fill-rule="nonzero"/></svg>') center left no-repeat; /* Establece el SVG como fondo */
-  padding-left: 20px; /* Añade espacio a la izquierda para el SVG */
-  background-size: 16px; /* Ajusta el tamaño del SVG según tus necesidades */
-  line-height: 1.5;
+.valores {
+    list-style-image: url('data:image/svg+xml,<svg clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m21 7.702-8.5 4.62v9.678c1.567-.865 6.379-3.517 7.977-4.399.323-.177.523-.519.523-.891zm-9.5 4.619-8.5-4.722v9.006c0 .37.197.708.514.887 1.59.898 6.416 3.623 7.986 4.508zm-8.079-5.629 8.579 4.763 8.672-4.713s-6.631-3.738-8.186-4.614c-.151-.085-.319-.128-.486-.128-.168 0-.335.043-.486.128-1.555.876-8.093 4.564-8.093 4.564z" fill-rule="nonzero"/></svg>');
+    align-items: center;
+    font-weight: 800;
+    font-size: 30px;
 }
+.mision {
+    list-style-image: url('data:image/svg+xml,<svg class="SVGBGI" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path class="accent" d="M4 4v10h16l-2-5 2-5H4z"></path><path class="outline" d="M18.77 9.35a.5.5 0 0 1 0-.71l1.38-1.38a2.5 2.5 0 0 0-1.77-4.27H5.5A2.5 2.5 0 0 0 3 5.49v15.5c0 .55.45 1 1 1s1-.45 1-1v-6.05c.16.03.33.05.5.05h12.88a2.5 2.5 0 0 0 1.77-4.27l-1.38-1.38ZM18.38 13H5.5a.5.5 0 0 1-.5-.5v-7c0-.28.22-.5.5-.5h12.88a.5.5 0 0 1 .35.85l-1.38 1.38a2.5 2.5 0 0 0 0 3.54l1.38 1.38a.5.5 0 0 1-.35.85Z"></path><path class="solid" d="M18.35 9.35a.5.5 0 0 1 0-.71l3.09-3.09a1.5 1.5 0 0 0-1.06-2.56H5.5A2.5 2.5 0 0 0 3 5.49v15.5c0 .55.45 1 1 1s1-.45 1-1v-6.05c.16.03.33.05.5.05h14.88a1.5 1.5 0 0 0 1.06-2.56l-3.09-3.09Z"></path></svg>');
+    align-items: center;
+    font-weight: 800;
+    font-size: 30px;
+}
+.vision{
+    list-style-image: url('data:image/svg+xml,<svg class="SVGBGI" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path class="accent" d="M4 4v10h16l-2-5 2-5H4z"></path><path class="outline" d="M18.77 9.35a.5.5 0 0 1 0-.71l1.38-1.38a2.5 2.5 0 0 0-1.77-4.27H5.5A2.5 2.5 0 0 0 3 5.49v15.5c0 .55.45 1 1 1s1-.45 1-1v-6.05c.16.03.33.05.5.05h12.88a2.5 2.5 0 0 0 1.77-4.27l-1.38-1.38ZM18.38 13H5.5a.5.5 0 0 1-.5-.5v-7c0-.28.22-.5.5-.5h12.88a.5.5 0 0 1 .35.85l-1.38 1.38a2.5 2.5 0 0 0 0 3.54l1.38 1.38a.5.5 0 0 1-.35.85Z"></path><path class="solid" d="M18.35 9.35a.5.5 0 0 1 0-.71l3.09-3.09a1.5 1.5 0 0 0-1.06-2.56H5.5A2.5 2.5 0 0 0 3 5.49v15.5c0 .55.45 1 1 1s1-.45 1-1v-6.05c.16.03.33.05.5.05h14.88a1.5 1.5 0 0 0 1.06-2.56l-3.09-3.09Z"></path></svg>');
+    align-items: center;
+    font-weight: 800;
+    font-size: 30px;
+}
+.contenido li p{
+    font-size: 20px;
+    font-weight: 200;
+    text-align: left;
+}
+.contenido li::marker{    
+    text-align: center;
+    font-size: 80px;
+    margin: 0 10px;
+    padding: 0px 0px;
+}
+        
+
 
