--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -264,6 +264,136 @@ h2{
     margin: 0 10px;
     padding: 0px 0px;
 }
+
+
+/* footer */
+/* Estilos generales para el footer */
+footer {
+    background-color: black;
+    color: white;
+    padding: 30px 0;
+}
+
+.footer-columns {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-left: -100px;
+}
+
+.column {
+    flex: 1;
+    text-align: left    ;
+    margin: 20px 50px;
+    margin-left: 80px;
+
+}
+
+
+
+/* Estilos para el logo en el footer */
+.footer-logo {
+    width: 150%;
+    margin-right: 10px;
+    margin-bottom: 30px;
+}
+
+/* Estilos para los encabezados en el footer */
+.column h2 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 0;
+}
+
+/* Estilos para el texto en el footer */
+.column p {
+    font-size: 16px;
+}
+
+/* Estilos para los enlaces en el footer */
+.column a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+/* Estilos para los íconos de redes sociales */
+.social-icons {
+    list-style: none;
+    padding: 0;
+}
+
+.social-icons li {
+    display: inline;
+    margin-right: 10px;
+}
+
+.social-icons img {
+    width: 30px;
+    height: 30px;
+}
+
+
+.container-form{
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 50px;
+    margin-top: 90px;
+}
+.container-form h2{
+    margin-bottom: 15px;
+    font-size: 35px
+}
+.container-form p{
+    font-size: 17px;
+    line-height: 1.6;
+    margin-bottom: 30px;
+}
+.container-form a{
+    font-size: 17px;
+    display: inline-block;
+    text-decoration: none;
+    width: 100%;
+    margin-bottom: 15px;
+    color: black;
+    font-weight: 700;
+}
+.container-form a i{
+    color: orange;
+    margin-right: 10px;
+}
+.container-form form .campo, textarea{
+    width: 100%;
+    padding: 15px 10px;
+    font-size: 16px;
+    border: 1px solid #dbdbdb;
+    margin-bottom: 20px;
+    border-radius: 3px;
+    outline: 0px;
+}
+.container-form form textarea{
+    max-width: 530px;
+    min-width: 530px;
+    min-height: 140px;
+    max-height: 150px;
+}
+.container-form .btn-enviar{
+    padding: 15px;
+    font-size: 16px;
+    border: none;
+    outline: 0px;
+    background: orange;
+    color: white;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+.container-form .btn-enviar:hover{
+    background: #e39403;
+}
         
 
 
