--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,8 @@
 *{margin:0; padding:0;}
-
+/* espaciador */
+.espaciador{
+    height:30px;
+}
 /* body */
 body{
     background: #fffffa;
@@ -242,8 +245,7 @@ h2{
     font-size: 30px;
 }
 .mision {
-    list-style-image: url('data:image/svg+xml,<svg class="SVGBGI" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path class="accent" d="M4 4v10h16l-2-5 2-5H4z"></path><path class="outline" d="M18.77 9.35a.5.5 0 0 1 0-.71l1.38-1.38a2.5 2.5 0 0 0-1.77-4.27H5.5A2.5 2.5 0 0 0 3 5.49v15.5c0 .55.45 1 1 1s1-.45 1-1v-6.05c.16.03.33.05.5.05h12.88a2.5 2.5 0 0 0 1.77-4.27l-1.38-1.38ZM18.38 13H5.5a.5.5 0 0 1-.5-.5v-7c0-.28.22-.5.5-.5h12.88a.5.5 0 0 1 .35.85l-1.38 1.38a2.5 2.5 0 0 0 0 3.54l1.38 1.38a.5.5 0 0 1-.35.85Z"></path><path class="solid" d="M18.35 9.35a.5.5 0 0 1 0-.71l3.09-3.09a1.5 1.5 0 0 0-1.06-2.56H5.5A2.5 2.5 0 0 0 3 5.49v15.5c0 .55.45 1 1 1s1-.45 1-1v-6.05c.16.03.33.05.5.05h14.88a1.5 1.5 0 0 0 1.06-2.56l-3.09-3.09Z"></path></svg>');
-    align-items: center;
+    list-style-image: url('data:image/svg+xml,<svg fill="%23000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 442.04 442.04" xml:space="preserve"><g><g><path d="M221.02,341.304c-49.708,0-103.206-19.44-154.71-56.22C27.808,257.59,4.044,230.351,3.051,229.203c-4.068-4.697-4.068-11.669,0-16.367c0.993-1.146,24.756-28.387,63.259-55.881c51.505-36.777,105.003-56.219,154.71-56.219c49.708,0,103.207,19.441,154.71,56.219c38.502,27.494,62.266,54.734,63.259,55.881c4.068,4.697,4.068,11.669,0,16.367c-0.993,1.146-24.756,28.387-63.259,55.881C324.227,321.863,270.729,341.304,221.02,341.304z M29.638,221.021c9.61,9.799,27.747,27.03,51.694,44.071c32.83,23.361,83.714,51.212,139.688,51.212s106.859-27.851,139.688-51.212c23.944-17.038,42.082-34.271,51.694-44.071c-9.609-9.799-27.747-27.03-51.694-44.071c-32.829-23.362-83.714-51.212-139.688-51.212s-106.858,27.85-139.688,51.212C57.388,193.988,39.25,211.219,29.638,221.021z"/></g><g><path d="M221.02,298.521c-42.734,0-77.5-34.767-77.5-77.5c0-42.733,34.766-77.5,77.5-77.5c18.794,0,36.924,6.814,51.048,19.188c5.193,4.549,5.715,12.446,1.166,17.639c-4.549,5.193-12.447,5.714-17.639,1.166c-9.564-8.379-21.844-12.993-34.576-12.993c-28.949,0-52.5,23.552-52.5,52.5s23.551,52.5,52.5,52.5c28.95,0,52.5-23.552,52.5-52.5c0-6.903,5.597-12.5,12.5-12.5s12.5,5.597,12.5,12.5C298.521,263.754,263.754,298.521,221.02,298.521z"/></g><g><path d="M221.02,246.021c-13.785,0-25-11.215-25-25s11.215-25,25-25c13.786,0,25,11.215,25,25S234.806,246.021,221.02,246.021z"/></g></g></svg>');
     font-weight: 800;
     font-size: 30px;
 }
@@ -253,6 +255,7 @@ h2{
     font-weight: 800;
     font-size: 30px;
 }
+
 .contenido li p{
     font-size: 20px;
     font-weight: 200;
@@ -272,7 +275,7 @@ footer {
     background-color: black;
     color: white;
     padding: 30px 0;
-    margin-top: 80px;
+    /* margin-top: 80px; */
 }
 
 .footer-columns {
