--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -152,7 +152,7 @@ h2{
     align-items: center;
     height: 400px;
     margin: 0 auto;
-    background-color: #C7D9AD;
+    background-color: rgb(99, 154, 16);
     border-radius: 25px;
 
 }
