--- a/src/styles/stylesCategoria.css
+++ b/src/styles/stylesCategoria.css
@@ -118,18 +118,18 @@ header nav a:hover{
 }
 
 .contenedor-img .boton{
-    display: flex;
-    gap: 10px;
+    
+    
     justify-content: center;
-    background-color:#84d60a92 ;
+    background-color:#89df08bb ;
     border-radius: 0px 0px 10px 10px;
     padding-bottom: 15px;
 }
 .contenedor-img button{
     color: rgb(0, 0, 0);
     background-color: #E8BE3F;
-    width: 90px;
-    height: 25px;
+    padding: 5px;
+    height: 30px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
@@ -149,7 +149,7 @@ header nav a:hover{
 .produc-conten{
     text-align: left;
     padding:10px 30px 10px 30px;
-    background-color:#84d60a92 ;
+    background-color:#89df08bb ;
     border-radius: 10px 10px 0px 0px;
 }
 
